@@ -51,7 +51,7 @@ To release NUnitAsp, follow these steps.  You'll need admin priviliges.
 <li> Rename ('mv') htdocs to htdocs.v#.# (e.g., htdocs.v1.4)
 <li> Delete ('rm -rf') the old htdocs backup
 <li> At Windows command prompt, copy the docs to the server: scp -r doc <i>username</i>@nunitasp.sf.net:/home/groups/n/nu/nunitasp/htdocs
-<li> At Unix (ssh) command prompt, update doc permissions: chmod 775 htdocs
+<li> At Unix (ssh) command prompt, update doc permissions: chmod -R 775 htdocs
 <li> Check that the update worked: <a href="http://nunitasp.sf.net">http://nunitasp.sf.net</a>
 </UL>
 </UL>
