@@ -1,13 +1,13 @@
 <%@ Page language="c#" Codebehind="FormVariableTestPage.aspx.cs" AutoEventWireup="false" Inherits="NUnitAspTestPages.FormVariableTestPage" %>
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" >
 <HTML>
-	<head>
+	<HEAD>
 		<title>FormVariableTestPage</title>
-		<meta name="GENERATOR" Content="Microsoft Visual Studio 7.0" />
-		<meta name="CODE_LANGUAGE" Content="C#" />
-		<meta name="vs_defaultClientScript" content="JavaScript" />
-		<meta name="vs_targetSchema" content="http://schemas.microsoft.com/intellisense/ie5" />
-	</head>
+		<meta name="GENERATOR" Content="Microsoft Visual Studio 7.0">
+		<meta name="CODE_LANGUAGE" Content="C#">
+		<meta name="vs_defaultClientScript" content="JavaScript">
+		<meta name="vs_targetSchema" content="http://schemas.microsoft.com/intellisense/ie5">
+	</HEAD>
 	<body>
 		<form id="FormVariableTestPage" method="post" runat="server">
 			<asp:CheckBox ID="checkbox" Runat="server" Checked="True"></asp:CheckBox>
